@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Display full message subject in onmouseover on truncated subject in mail view (#5346)
 - Searching in both contacts and groups when LDAP addressbook with group_filters option is used
 - Update TinyMCE to version 4.3.13 (#5309)
 - Enigma: Search missing public keys on a key-server in mail compose (#5286)
